fix: enhance left sidebar overflow styling

--- a/src/css/left-sidebar.css
+++ b/src/css/left-sidebar.css
@@ -201,7 +201,7 @@
 #projects > .user-projects {
   display: flex;
   flex-direction: column;
-  max-height: 60%;
+  max-height: 30rem;
   overflow-y: auto;
 }
 
